TRYING TO DO THE HTML VERSION ;-;

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,9 @@
     <link rel = "stylesheet" type = "text/css" href = "./style.css"/>
     <script src="main.js"></script>
 </head>
-<body>
-    <canvas id="myCanvas" class="myCanvas" width="200" height="100"></canvas>
+<body onLoad="run()">
+    <div class="canvas-div" id="canvas-div">
+        <canvas id="myCanvas" class="myCanvas">Your browser does not support the HTML canvas tag.</canvas>
+    </div>
 </body>
 </html>
